--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,9 +9,9 @@ spring:
   application:
     name: 'server-auth'
   datasource:
-    password: root
-    username: root
-    url: jdbc:mysql://localhost:3306/authDB
+    password: ck4ftjw9qjr27se9
+    username: kc7goe14ju2hxa02
+    url: jdbc:mysql://dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ejzg8cqflv2sg5fo
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
