--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,7 +8,10 @@ security:
 spring:
   application:
     name: 'server-auth'
-    url: ${JDBC_DATASOURCE_URL}
+  datasource:
+    password: 'ck4ftjw9qjr27se9'
+    username: 'kc7goe14ju2hxa02'
+    url: jdbc:mysql://dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ejzg8cqflv2sg5fo?serverTimezone=GMT
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
