--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,9 +9,9 @@ spring:
   application:
     name: 'server-auth'
   datasource:
-    password: 'ck4ftjw9qjr27se9'
-    username: 'kc7goe14ju2hxa02'
-    url: jdbc:mysql://dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ejzg8cqflv2sg5fo?serverTimezone=GMT
+    password: 'omjbr1lcr727wzv5'
+    username: 'ix47y9wr4463uh7x'
+    url: jdbc:mysql://	dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/becuuzhi3samphf0?serverTimezone=GMT
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
