--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,7 +8,14 @@ security:
 spring:
   application:
     name: 'server-auth'
- 
+  datasource:
+    password: 'omjbr1lcr727wzv5'
+    username: 'ix47y9wr4463uh7x'
+    url: jdbc:mysql://	dcrhg4kh56j13bnu.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/becuuzhi3samphf0?serverTimezone=GMT
+    driver-class-name: org.mariadb.jdbc.Driver
+    jpa:
+      hibernate:
+        ddl-auto: update
 
 eureka:
   client:
